added gallery patch

--- a/prepros.config
+++ b/prepros.config
@@ -908,6 +908,34 @@
     },
     "files": [
       {
+        "file": "src/img/img.jpg",
+        "config": {
+          "tasks": {
+            "jpg": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 1308340,
+          "optimized": true,
+          "customOutput": "img/img.jpg"
+        }
+      },
+      {
+        "file": "src/img/wallpaperflare.com_wallpaper.jpg",
+        "config": {
+          "tasks": {
+            "jpg": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "customOutput": "img/wallpaperflare.com_wallpaper.jpg"
+        }
+      },
+      {
         "file": "src/index.pug",
         "config": {
           "customOutput": "index.html"
